# push-notification-kafka-plugin

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  FindDovecot.cmake  Makefile.am  README.md  autogen.sh  configure.ac  make_dist.sh
rpm/: push-notification-kafka-plugin.spec
src/: Makefile.am  push-notification-driver-kafka.c  push-notification-kafka-driver.c  push-notification-kafka-driver.h  push-notification-kafka-event.c  push-notification-kafka-event.h  push-notification-kafka-plugin.c  push-notification-kafka-plugin.h
src/lib-test/: push-notification-kafka-driver-test.c  push-notification-kafka-driver-test.h  push-notification-kafka-event-test.c  test-common.c
